# demo-desktop-reactive-app

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
data/: Alpinejs.yaml  Angular.yaml  Astro.yaml  Blitz.yaml  Capacitor.yaml  Cordova.yaml  Docusaurus.yaml  Electron.yaml  Eleventy.yaml  Expo.yaml  Flutter.yaml  Fresh.yaml  HTMX.yaml  Ionic.yaml  Lit.yaml  NWjs.yaml  Nuxt3.yaml  Preact.yaml  Quasar.yaml  Qwik.yaml  React.yaml  ReactNative.yaml  Remix.yaml  Solid.yaml  SolidStart.yaml  Stencil.yaml  Svelte.yaml  SvelteKit.yaml  Vuejs.yaml  Xamarin.yaml
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/binding/: mod.rs  specta.rs
src-tauri/src/core/: ext.rs  logging.rs  mod.rs  plugins.rs
src-tauri/src/filesystem/: import.rs  mod.rs  watcher.rs
src/bindings/: commands.ts  events.ts  types.ts  types.ts.generated
src/components/: index.ts
src/components/app/: app.css  index.ts
src/components/file-list/: file-list.css  filters.ts  index.ts  query.ts
src/components/icons/: index.ts
src/components/info-dialog/: index.ts  info-dialog.css
src/components/settings-header/: index.ts  settings-header.css
src/components/toaster/: index.d.ts  index.js  toaster-service.d.ts  toaster.css  toaster.d.ts
src/core/: db.ts  entity.ts  import.ts  index.ts  sync.ts
src/states/: index.ts
src/utils/: local-storage-store.ts  types.ts
